compiler/archived/sml/test/integration/duplicate_decls.err
TypeError in [test/integration/duplicate_decls.brm:3.0-4.0]: Duplicate binding for foo
