compiler/archived/sml/test/integration/duplicate_decls.brm
type FOO_FOO = interface
    val foo : __int
    val foo : bool
end

fun main _ = 0

